CICO-38430 style fixes

--- a/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
@@ -38,7 +38,7 @@
             <p class="sub-main-text margin-top-20" ng-bind-html="selectedAddonDescrition"></p>
             <br/>
             <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
-               <p class="sub-main-text"> Select Quantity</p>
+               <p class="sub-main-text"> Select quantity</p>
                <div class="row">
                   <div class="select-style addon-numbers">
                      <select ng-model="selectedAddon.quantity">
