CICO-38430 vdara customization

--- a/guestweb/common_css/vdara/theme.less
+++ b/guestweb/common_css/vdara/theme.less
@@ -158,7 +158,9 @@ a,a:hover,.main-text,
 .horizontal-line-sep-mobile{
   border-top: 1px solid #9b9b9b;
 }
-
+.addon-container.selected {
+    background: #F28B00;
+}
 @media (max-width: 990px) {
     .logo-image {
         margin: 6% auto;
