--- a/guestweb/common_css/aria/theme.less
+++ b/guestweb/common_css/aria/theme.less
@@ -183,6 +183,9 @@ a,a:hover,.main-text,
 .res-details-heading, .res-details-heading:hover{
   color:#3f6176;
 }
+.addon-container.selected {
+    background-color:rgba(63,97,118,0.8);
+}
 @media (max-width: 990px) {
     .logo-image {
         margin: 9% auto 7%;
