--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -517,6 +517,7 @@
       width:40%;
       position:relative;
       img{
+        max-height:100%;
         position:absolute;
         top:50%;
         -ms-transform: translate(-50%, -50%);
