--- a/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/MGM/gwOfferAddonOptions.html
@@ -38,7 +38,7 @@
             <p class="sub-main-text margin-top-20" ng-bind-html="selectedAddonDescrition"></p>
             <br/>
             <div ng-show="selectedAddon.type === 'per room' || selectedAddon.type === 'flat rate'">
-               <p class="sub-main-text"> Select quantity</p>
+               <p class="sub-main-text">{{addonSelectQty}}</p>
                <div class="row">
                   <div class="select-style addon-numbers">
                      <select ng-model="selectedAddon.quantity">
@@ -49,11 +49,11 @@
                </div>
             </div>
             <!-- submit -->
-            <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-hide="selectedAddon.is_selected">Purchase</a>
-            <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-show="selectedAddon.is_selected">Remove Addon</a>
+            <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-hide="selectedAddon.is_selected">{{addonPurchase}}</a>
+            <a class="btn btn-template margin-top-20" ng-click="purchaseAddon()" ng-show="selectedAddon.is_selected">{{addonRemove}}</a>
             <div class="row no-thanks-wrap margin-top-20">
                <p class="centeralign no-thanks">
-                  <a ng-click="noThanksClicked()" class="sub-text no-text-case">No thanks</a>
+                  <a ng-click="noThanksClicked()" class="sub-text no-text-case">{{addonSkip}}</a>
                </p>
             </div>
          </div>
@@ -64,7 +64,7 @@
       </div>
       <!-- List view -->
       <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'LIST_VIEW'">
-         <p class="main-text no-text-case margin-top-20">Enhance your stay</p>
+         <p class="main-text no-text-case margin-top-20">{{addonListTitle}}</p>
          <p class="sub-main-text no-text-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
          <div ng-repeat="addon in addonList" class="addon-container" ng-click="addonSelected(addon)" ng-class="{'selected':addon.is_selected || addon.quantity > 0}">
             <div class="content-image">
@@ -75,10 +75,10 @@
                <p class="sub-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}&nbsp;{{addon.suffix}}</p>
             </div>
          </div>
-         <a class="btn btn-template margin-top-80" ng-click="noThanksClicked()">Continue</a>
+         <a class="btn btn-template margin-top-80" ng-click="noThanksClicked()">{{addonContinue}}</a>
          <div class="row no-thanks-wrap margin-top-20">
             <p class="centeralign no-thanks">
-               <a ng-click="noThanksClicked()" class="sub-text no-text-case">No thanks</a>
+               <a ng-click="noThanksClicked()" class="sub-text no-text-case">{{addonSkip}}</a>
             </p>
          </div>
       </div>
