--- a/guestweb/common_css/snt/theme.less
+++ b/guestweb/common_css/snt/theme.less
@@ -96,6 +96,10 @@ a,a:hover,.main-text,
    background-image: url('/assets/guestweb/common_images/white/done_icon.png');
 }
 
+.addon-container.selected {
+    background-color:rgba(251, 139, 51,0.8);
+}
+
 @media (max-width: 990px) {
     .logo-image {
         margin: 9% auto 7%;
