CICO-38430 style fixes

--- a/guestweb/common_css/style.less
+++ b/guestweb/common_css/style.less
@@ -25,7 +25,9 @@ body {
 .padding-top-30{
   padding-top:30px !important;
 }
-
+a{
+   cursor:pointer;
+}
 .black-text{
     color: @black !important;
 }
@@ -264,6 +266,9 @@ body {
     }
     .right-arrow-button {
         background-position: 0 1px;
+    }
+    .addon-details .price-details{
+      font-size: 2.8em !important;
     }
 }
 
@@ -594,4 +599,3 @@ and (max-device-width : 1028px){
 .no-text-case{
     text-transform:none;
 }
-
