CICO-38430 style fixes

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -513,6 +513,8 @@
     min-height:118px;
     margin-bottom:10px;
     cursor:pointer;
+    display:inline-flex;
+    width:100%;
     .content-image{
       width:40%;
       position:relative;
@@ -531,12 +533,11 @@
     }
     .content-desc{
      width:55%;
-        margin-left:10px;
+        margin-left:20px;
         p{
             text-align: left;
         }
         p:first-of-type {
-            font-size: 1.5em !important;
             font-weight:500;
         }
     }
