--- a/guestweb/common_css/style.less
+++ b/guestweb/common_css/style.less
@@ -270,6 +270,16 @@ a{
     .addon-details .price-details{
       font-size: 2.8em !important;
     }
+    .addon-section-container{
+        max-width:550px;
+        .btn-template{
+            max-width:550px;
+        }
+        .addon-container{
+            min-height:150px;
+            padding:15px;
+        }
+    }
 }
 
 @media only screen 
