--- a/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
+++ b/guestweb/common_templates/partials/checkin/gwOfferAddonOptions.html
@@ -30,9 +30,9 @@
     <!-- main content -->
     <div class="row" ng-hide="isLoading || netWorkError">
         <!-- detailed view -->
-        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'DETAILED_VIEW'">
+        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none addon-section-container" ng-show="mode === 'DETAILED_VIEW'">
             <img ng-src="{{selectedAddon.image}}" class="content-image  margin-top-20" alt="">
-            <p class="main-text no-text-case bold-text margin-top-20" ng-bind="addonPurchaseMsgForDisplay"></p>
+            <p class="main-text no-text-case bold-text margin-top-20" ng-bind="addonPurchaseMsgForDisplay" ng-hide="showPurchaseStatus"></p>
             <div ng-hide="showPurchaseStatus" class="addon-details">
                 <p class="sub-main-text margin-top-20 no-text-case price-details">{{currencySymbol}}{{selectedAddon.price}} {{selectedAddon.price_label}}&nbsp;{{selectedAddon.suffix}}</p>
                 <p class="sub-main-text margin-top-20" ng-bind-html="selectedAddonDescrition"></p>
@@ -58,12 +58,13 @@
                 </div>
             </div>
             <div ng-show="showPurchaseStatus" class="margin-bottom-10">
+                <p class="main-text no-text-case bold-text margin-top-20" ng-bind="selectedAddon.title"></p>
                 <p class="sub-main-text no-text-case margin-top-20">{{purchaseStatusText}}</p>
                 <a class="btn btn-template margin-top-80 margin-bottom-10" ng-click="doneClicked()">Done</a>
             </div>
         </div>
         <!-- List view -->
-        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none" ng-show="mode === 'LIST_VIEW'">
+        <div class="col-md-8 top-spacing sm-no-top-spacing section-container float-none addon-section-container" ng-show="mode === 'LIST_VIEW'">
             <p class="main-text no-text-case">{{addonListTitle}}</p>
             <p class="sub-main-text no-text-case margin-top-20">showing {{addonList.length}} of {{addonList.length}}</p>
             <div ng-repeat="addon in addonList" class="addon-container" ng-click="addonSelected(addon)" ng-class="{'selected':addon.is_selected || addon.quantity > 0}">
@@ -71,8 +72,8 @@
                     <img ng-src="{{addon.image}}" alt="" width="100%" height="auto">
                 </div>
                 <div class="content-desc">
-                    <p class="sub-text no-text-case margin-top-10">{{addon.title | limitTo: 50 }}{{addon.title.length > 50? '...' : ''}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
-                    <p class="sub-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}&nbsp;{{addon.suffix}}</p>
+                    <p class="sub-main-text no-text-case margin-top-10">{{addon.title | limitTo: 50 }}{{addon.title.length > 50? '...' : ''}}<span ng-show="(addon.type === 'per room' || addon.type === 'flat rate') && addon.quantity > 0">&nbsp;({{addon.quantity}})</span></p>
+                    <p class="sub-main-text  no-text-case margin-top-20">{{currencySymbol}}{{addon.price}} {{addon.price_label}}&nbsp;{{addon.suffix}}</p>
                 </div>
             </div>
             <a class="btn btn-template margin-top-20" ng-click="noThanksClicked()">{{addonContinue}}</a>
