--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -513,7 +513,9 @@
     min-height:118px;
     margin-bottom:10px;
     cursor:pointer;
-    display:inline-flex;
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     width:100%;
     .content-image{
       width:40%;
