CICO-38430 minor fix

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -525,6 +525,7 @@
         position:absolute;
         top:50%;
         -ms-transform: translate(-50%, -50%);
+        -webkit-transform: translate(0%, -50%);
         transform: translate(-50%, -50%);
         border:1px #A9A9A9 solid;
       }
