CICO-38430 style fix

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -522,6 +522,11 @@
       position:relative;
       img{
         max-height:100%;
+        position:absolute;
+        top:50%;
+        -ms-transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
         border:1px #A9A9A9 solid;
       }
       min-height:98px;
