CICO-38430 minor style fix

--- a/guestweb/common_css/style.less
+++ b/guestweb/common_css/style.less
@@ -278,6 +278,9 @@ a{
         .addon-container{
             min-height:150px;
             padding:15px;
+            .content-image{
+                min-height:120px;
+            }
         }
     }
 }
