--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -520,9 +520,14 @@
     .content-image{
       width:40%;
       position:relative;
+      display:flex;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      align-items:center;
+      -webkit-align-items: center;
+      -ms-align-items: center;
       img{
         max-height:100%;
-        position:absolute;
         border:1px #A9A9A9 solid;
       }
       min-height:98px;
