CICO-38437 UI for language dropdown switcher in add-on section, will sync with backend languages once that is complete

--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -1804,3 +1804,18 @@ end of help-tip
       }
     }
   }
+
+.addon-lang-dropdown {
+  position: absolute;
+  right: 0;
+  top: -12px;
+  right: 0;
+  width: 19%;
+  >select{
+    background: #f5f5f5 !important;
+  }
+  
+}
+.addon-status{
+  right: 20% !important;
+}
