CICO-33347 style fix

--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -333,3 +333,42 @@
 }
 
 /* CICO-37659*/
+
+
+
+.content-table {
+  width:70%;
+  line-height:50px;
+  tr{
+    margin-bottom:3px;
+    td .entry{
+      margin-left:10px;
+    }
+    td:first-child{
+      width:276px;
+    }
+    th.label-heading{
+      padding-left:10px;
+    }
+  }
+  tr th{
+    font-weight:600;
+  }
+
+}
+.paddig-left-30{
+  padding-left:30px;
+}
+.same-line-toggle{
+  display:flex;
+  label{
+    width:65%;
+    font-size:100% !important;
+    margin-bottom:0px;
+    text-transform:none !important;
+    margin-right:15px;
+  }
+  .switch-button.single {
+    margin-top:0px;
+  }
+}
