CICO-29257 - Fixed complimentary report

--- a/rover/partials/reports/complimentaryRoomReport/rvComplimentaryRoomReportRow.html
+++ b/rover/partials/reports/complimentaryRoomReport/rvComplimentaryRoomReportRow.html
@@ -27,5 +27,5 @@
     {{transaction.nights}}
 </td>
 <td class="comp-nights">
-    {{transaction.comlimentay_nights }}
+    {{transaction.complimentay_nights }}
 </td>
