CICO-33347 service layer changes

--- a/admin/partials/upsellAddons/adUpsellAddons.html
+++ b/admin/partials/upsellAddons/adUpsellAddons.html
@@ -44,7 +44,7 @@
             </table>
             <ad-form-title form-title="Add-on default image"></ad-form-title>
             <div class="entry half-width">
-                <label for="hotel-logo">Add-on default image </label>
+                <label for="hotel-logo">Add-on default image (900*600 px)</label>
                 <div class="file-upload with-preview">
                     <span class="input">{{data.addon_default_image}}</span>
                     <a id="deleteLogo" class="icons icon-delete large-icon delete_item" ng-if="data.addon_default_image.length > 0" ng-click="data.addon_default_image = ''"></a>
