CICO-29257 Fixed the issue with showing empty instead of pending for reservations having no guest name

--- a/rover/partials/reports/complimentaryRoomReport/rvComplimentaryRoomReportRow.html
+++ b/rover/partials/reports/complimentaryRoomReport/rvComplimentaryRoomReportRow.html
@@ -1,5 +1,6 @@
 <td class="name">
-    <strong>{{transaction.name}}</strong>
+    <strong ng-if="!!transaction.name">{{transaction.name}}</strong>
+    <strong ng-if="transaction.name == '' ">Pending</strong>
 </td>
 <td class="room">
     {{transaction.room_no}}
