CICO-33348 adding zestweb addon menu

--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -372,3 +372,22 @@
     margin-top:0px;
   }
 }
+
+
+
+#addons-list {
+    margin-bottom:100px;
+    tbody tr td .addon-image{
+      padding:10px;
+    }
+}
+.bottom-save-section{
+    position: fixed;
+    background:#F1F1F1;
+    z-index:1000;
+    bottom: 0px;
+    border-top: 1px rgba(0,0,0,.1) solid;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+}
