CICO-39030 - Style update

--- a/stylesheets/less/app/screens/22.diary-nightly.less
+++ b/stylesheets/less/app/screens/22.diary-nightly.less
@@ -480,6 +480,10 @@
         &.highlighted {
             background-color: fade(@orange, 30%);
         }
+
+        &.not-clickable {
+            cursor: default;
+        }
     }
 
     .room-number {
