--- a/admin/partials/interfaces/M3BackOffice/ADM3Configuration.html
+++ b/admin/partials/interfaces/M3BackOffice/ADM3Configuration.html
@@ -12,7 +12,7 @@
                 <div class="form-title full-width">
                     <h3><span translate>M3_SUB_TITLE</span></h3>
                 </div>
-                <table>q
+                <table>
                     <tbody>
                     <tr>
                         <th>
