--- a/admin/partials/rates/adNewAddon.html
+++ b/admin/partials/rates/adNewAddon.html
@@ -6,12 +6,12 @@
 					<span>{{ addonTitle }}</span>
 					{{ addonSubtitle }}
 				</h3>
-                <em class="status addon-status">
+                <em class="status" ng-class='{"addon-status":isHourlyRatesEnabled}'>
 					{{'MANDATORY_FIELDS_MESSAGE1'| translate}}
 					<strong>*</strong>
 					{{'MANDATORY_FIELDS_MESSAGE2'| translate}}
 				</em>
-                <div class="filters addon-lang-dropdown">
+                <div ng-show='isHourlyRatesEnabled' class="filters addon-lang-dropdown">
                     <select ng-model="filter.locale" name="locale" ng-change="onLocaleChange()">
                         <option ng-repeat="locale in languages.locales" value="{{locale.value}}" ng-selected="locale.value==filter.locale"> {{locale.description}} </option>
                     </select>
