CICO-38763 fixed the style issue

--- a/guestweb/common_css/distrikt_nyc/theme.less
+++ b/guestweb/common_css/distrikt_nyc/theme.less
@@ -12,7 +12,7 @@ body {
 }
 
 .back-text {
-    color: #000;
+    color: #fff !important;
 }
 
 a,
@@ -240,11 +240,11 @@ a:hover,
 
 .res-details-heading,
 .res-details-heading:hover {
-    color: #464485;
+    color: #283347;
 }
 
 .back-to-checkout {
-    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
+    background: url(/assets/guestweb/common_images/left_arrow.png) center top no-repeat;
     height: 40px;
 }
 
