--- a/rover/css/rate-manager.less
+++ b/rover/css/rate-manager.less
@@ -80,7 +80,7 @@
                 background-color: rgba(0,0,0,.05);
             }
 
-            .button { width: 100%; }
+            .button { width: 100%; padding: 0 10px; }
         }
 
         /* Elements ***/
@@ -100,11 +100,14 @@
         .deleteall {
             text-transform: uppercase;
             font-size: 14px;
-            color: @grey3;
+            color: @red;
+            width: 100%;
             display: block;
             text-align: center;
             cursor: pointer;
             margin-bottom: 10px;
+            margin-top: 5px;
+            font-weight: 400;
         }
 
         .entry {
@@ -145,7 +148,7 @@
                 
                 .icons {
                     position: absolute;
-                    top: 43px;
+                    top: 30px;
                     left: 10px;
                     .square(18px);
                     .show();
@@ -156,6 +159,86 @@
                     font-weight: 600;
                     padding-left: 35px;
                 }
+            }
+
+            .select-group {
+                #flexbox > .parent( row, flex-start, center, '');
+
+                .select {
+                     
+                    select {
+                        border-radius: 0;
+                        font-size: 14px;
+                    }
+
+                    &:first-child {
+
+                        border-right: 1px solid @white;
+                        select {
+                            #border-radius > .left(); 
+                            background: @grey1;
+                        }
+
+                        &:after {
+                            background-color: @grey1;
+                        }
+                    }
+                    &:last-child {
+                        select {
+                            #border-radius > .right(); 
+                        }
+                        .calc-width( 100, 135 );
+                    }
+                }
+            }
+        }
+
+        .selected-data {
+            strong { 
+                font-weight: 600;
+                text-transform: uppercase;
+                font-size: 14px;
+            }
+        }
+
+        .filters {
+            clear: both;
+            width: 100%;
+            margin-top: 10px;
+            #flexbox > .parent( row, flex-start, center, '');
+
+            li { 
+                cursor: pointer;
+                margin: 0 0 0 1px;
+                font-size: 13px;
+                line-height: 40px;
+                text-align: center;
+                color: @textColor; 
+                text-transform: uppercase;
+                padding: 0 5px;
+                width: 35%;
+                .clickable;
+                #border-radius > .rounded(0);
+
+                &:hover { 
+                    color: @logoPrimary; 
+                    .box-shadow();
+                }
+
+                &.active {
+                    cursor: default;
+                    color: @white;
+                    text-shadow: 1px 1px 0 rgba(0,0,0,.1);
+                    .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.3)");
+                    .gradient (@logoGradientEnd, @logoGradientStart);
+                }
+
+                &:first-child { 
+                    width: 65px;
+                    #border-radius > .left(); 
+                }
+
+                &:last-child { #border-radius > .right(); }
             }
         }
 
@@ -224,12 +307,7 @@
                     background-color:@grey1;
                 }
             }
-
-            .rates-box { 
-                margin: 10px; 
-
-                &.first { margin-top: 0; }
-            }
+ 
         }
 
         /* Rates Box ***/
@@ -240,7 +318,7 @@
             text-transform: uppercase;
             color: @white;
             background-color: @blue;
-            margin: 10px 0;
+            margin-top: 5px;
             padding: 5px 25px 5px 10px;
             #border-radius > .rounded();
 
@@ -358,7 +436,7 @@
 
         /* Opened slider ***/
         &.slide_right { 
-            width: 260px;
+            width: 300px;
 
             h3,
             hr,
@@ -418,7 +496,7 @@
             }
 
             .back-button {
-                .box-shadow(none);
+               background-color: @grey1;
             }
         }
 
@@ -457,15 +535,15 @@
         &.rate-view {
 
             .info {
-                .calc-width(100, 375);
+                .calc-width(100, 395);
             }
 
             .actions {
-                max-width: 365px;
+                max-width: 395px;
 
                 li {
                     &:first-child {
-                        width: 180px;
+                        width: 205px;
                         margin-right: 15px;
                     }
 
@@ -592,7 +670,10 @@
             &.expanded-row {
                 height: 200px;
                 
-                td { vertical-align: top; }
+                td { 
+                    vertical-align: top;
+                    padding-top: 15px;
+                }
             }
         }
 
@@ -735,9 +816,8 @@
 
              .rate-calendar { 
                 tr {
-                
 
-                    &:first-child {
+                    &:not(.expanded-row):first-child {
                         height: 60px;
                     }
 
@@ -753,59 +833,8 @@
             tr {
                 
 
-                &:first-child {
+                &:not(.expanded-row):first-child {
                     height: 45px;
-
-                    &.rate-type {
-                        height: 50px;
-
-                        td {
-                            &:before {
-                                height: 100%;
-                            }
-                        }
-                    }
-                }
-
-                &.rate-type {
-                    background: @white;
-                    height: 55px;
-
-                    .name {
-                        text-transform: none;
-                        font-weight: 600;
-                        padding-right: 15px;
-                    }
-
-                    td {
-                        a {
-                            position: relative;
-                            z-index: 2;
-                        }
-
-                        &:before,
-                        &:after {
-                            position: absolute;
-                            content: '';
-                            display: block; 
-                            z-index:1;
-                        }
-
-                       &:before {
-                            width: 5px;
-                            background: @white;
-                            .calc-height(100,5);
-                            bottom:0;
-                            right:-3px;
-                        }
-
-                        &:after {
-                            width: 100%;
-                            height: 10px;
-                            bottom:0;
-                            box-shadow: 0px 1px 0px rgba(0,0,0,0.1);
-                        }
-                    }
                 }
 
             }
@@ -836,6 +865,11 @@
                 -webkit-line-clamp: 2;
                 -webkit-box-orient: vertical;  
 
+                &:not(.base-rate),
+                &:not(.contracted-rate) {
+                    padding-left:10px;
+                }
+
                 &.bolder { 
                     font-weight: 18px;
                     font-weight: 600;
@@ -861,16 +895,16 @@
                     }
                 }
 
-
                 &.gray { 
                     color:@grey3;
                     font-size: 14px;
                     text-transform: none;
                 }
 
-                &.room-type {
-                    padding-right: 20px;
-                }
+                &.room-type,
+                &.no-arrow {
+                    padding-right: 15px;
+                } 
             }
 
             .base-rate-indicator,
@@ -951,18 +985,14 @@
 
             .icon-double-arrow {
                 position: absolute;
-                top: 23px;
+                top: 21px;
                 right: 10px;
                 background-position: 4px -1061px;
                 background-size: 80px;
                 .square(20px);
             }
 
-            .expanded-row {
-                .icon-double-arrow {
-                    top: 13px;
-                }
-            }
+           
         }
     }
     
@@ -1220,19 +1250,7 @@
         /* First Row - Days ***/
         &.calendar-rate-table-days { 
             top: 0;
-            height: 105px;
-            z-index: 999;
-
-            &:before {
-                content: '';
-                position: absolute;
-                left: 0;
-                width: 5px;
-                height: 120px;
-                box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
-                left: -5px;
-                z-index: 999;
-            } 
+            height: 105px; 
 
             td {
                 vertical-align: top;
@@ -1282,76 +1300,6 @@
                 &:first-child {
                     .cell-container { 
                         padding-top: 0;
-                    }
-
-                    &.rate-type {
-                        .cell,
-                        .cell-container {
-                            height: 50px;
-                        }
-                    }
-                }
-
-                &.rate-type {
-
-                    td {
-                        &:first-child {
-                            .cell-container {
-                                .cell-content {
-                                    &:before {
-                                        .calc-width(100, 10);
-                                        left: 5px; 
-                                    }
-
-                                    .restriction-icon { 
-                                        margin-left: 10px;
-                                    }
-                                }
-                            }
-                        }
-
-                        .restriction-icon {
-                            position: relative;
-                            z-index: 2;
-                            margin-left: 5px;
-                        }
-                    }
-
-                    .cell {
-                        height: 55px;
-                    }
-
-                    .cell-container {
-                        height: 55px; 
-                        padding-left: 0;
-                        padding-right: 0;
-
-                        .cell-content {
-                            padding: 5px 5px 5px 0;
-                            position: relative;
-                            background: @white;
-                            #flexbox > .parent( row, flex-start, center, '');
-                            box-shadow: 0px 1px 0px rgba(0,0,0,0.1);
-
-                            &:before {
-                                content:'';
-                                z-index: 1;
-                                display: block;
-                                position: absolute;
-                                .calc-width(100, 5);
-                                .calc-height(100, 10);
-                                left: 0px;
-                                top: 5px;
-                                background: #f8f8f8;
-                                .box-shadow(inset 0px 0px 1px rgba(0,0,0,0.3));
-                            }
-                        }
-
-                        &.weekend_day {
-                            .cell-content {
-                                background: #eceff1;
-                            }
-                        }
                     }
                 }
             }
