CICO-34733 - Style update

--- a/stylesheets/less/app/03_graphics.less
+++ b/stylesheets/less/app/03_graphics.less
@@ -566,6 +566,20 @@
                 &.icon-completed { background-position: 0 -10180px; }
             }
 
+        /* Rooms ***/
+
+            &.icon-blocked {
+                background-position: 0 -10660px;
+            }
+
+            &.icon-available {
+                background-position: 0 -10720px;
+            }
+
+            &.icon-picked-up {
+                background-position: 0 -10780px;
+            }
+
 		/* Rotations */
 		&.rotate-down {
 			transform:rotate(-90deg);
