--- a/admin/partials/rates/adNewAddon.html
+++ b/admin/partials/rates/adNewAddon.html
@@ -13,7 +13,7 @@
 				</em>
                 <div ng-show='isConnectedToPMS' class="filters addon-lang-dropdown">
                     <select ng-model="filter.locale" name="locale" ng-change="onLocaleChange()">
-                        <option ng-repeat="locale in languages.locales" value="{{locale.value}}" ng-selected="locale.value==filter.locale"> {{locale.description}} </option>
+                        <option ng-repeat="locale in languages.locales" value="{{locale.value}}" ng-selected="locale.value==filter.locale"> {{locale.language}} </option>
                     </select>
                 </div>
             </div>
