--- a/rover/partials/groups/summary/rvGroupConfigurationSummaryTab.html
+++ b/rover/partials/groups/summary/rvGroupConfigurationSummaryTab.html
@@ -12,7 +12,7 @@
             </div>
             <div class="entry margin">
                 <label for="group-code" translate>GROUP_CODE</label>
-                <input id="group-code" ng-model="groupConfigData.summary.group_code" type="text" ng-disabled="isInStaycardScreen()"/>
+                <input id="group-code" ng-model="groupConfigData.summary.group_code" type="text" ng-disabled="groupConfigData.summary.linked_external_interface || isInStaycardScreen()"/>
             </div>
             <div class="entry">
                 <label for="group-firstname" translate>CONTACT_FIRST_NAME</label>
