CICO-37744 added the email and zest web templates

--- a/guestweb/common_css/stella_hotel/theme.less
+++ b/guestweb/common_css/stella_hotel/theme.less
@@ -12,7 +12,7 @@ body {
 }
 
 .back-text {
-    color: #fff !important;
+    color: #000;
 }
 
 a,
@@ -30,7 +30,7 @@ a:hover,
 }
 
 .header-bar {
-    background: #283347;
+    background: #fff;
 }
 
 .logo-image {
@@ -62,7 +62,7 @@ a:hover,
 
 .btn,
 .btn:hover {
-    background: #283347;
+    background: #913202;
     color: @white;
 }
 
@@ -79,27 +79,27 @@ a:hover,
 
 .dark-button,
 .dark-button:hover {
-    background: #3A465D;
+    background: #913202;
 }
 
 .light-button,
 .light-button:hover {
-    background: #515D75;
+    background: #A73F0D;
 }
 
 .checkouttime1,
 .checkouttime1:hover {
-    background: #515D75;
+    background: #A73F0D;
 }
 
 .checkouttime2,
 .checkouttime2:hover {
-    background: #3A465D;
+    background: #913202;
 }
 
 .checkouttime3,
 .checkouttime3:hover {
-    background: #283247;
+    background: #792900;
 }
 
 .no-thanks,
@@ -128,7 +128,7 @@ a:hover,
 }
 
 .upgrade-details .upgrades-btn {
-    background: #283347;
+    background: #913202;
 }
 
 .proceed-to-checkin {
@@ -143,7 +143,7 @@ a:hover,
 /*----------------- date picker -------------------------*/
 
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
-    color: #3A465D;
+    color: #913202;
     color: transparent;
 }
 
@@ -153,7 +153,7 @@ a:hover,
 }
 
 .pickadate-cell .pickadate-active {
-    background-color: #3A465D !important;
+    background-color: #913202 !important;
     color: #fff;
 }
 
@@ -195,7 +195,7 @@ a:hover,
 }
 
 .date-picker-header {
-    background-color: #3A465D;
+    background-color: #913202;
 }
 
 .calendar-back {
@@ -210,7 +210,7 @@ a:hover,
 .pickadate-next,
 .pickadate-prev:hover,
 .pickadate-next:hover {
-    color: #515D75;
+    color: #A73F0D;
 }
 
 .date-picker-wrap {
@@ -240,11 +240,11 @@ a:hover,
 
 .res-details-heading,
 .res-details-heading:hover {
-    color: #283347;
+    color: #A73F0D;
 }
 
 .back-to-checkout {
-    background: url(/assets/guestweb/common_images/left_arrow.png) center top no-repeat;
+    background: url(/assets/guestweb/common_images/black/left_arrow.png) center top no-repeat;
     height: 40px;
 }
 
